# bear-mcp

./: .gitignore  CLAUDE.md  PHASE_1_SUMMARY.md  PLAN.md  README.md  TEST_STATUS.md  TODO.md  main.py  pyproject.toml  pytest.ini
bear_mcp/: __init__.py  cli.py  main.py  utils.py
bear_mcp/ai/: __init__.py  ollama_client.py  prompt_templates.py  summarization_service.py
bear_mcp/bear_db/: __init__.py  connection.py  models.py  monitor.py
bear_mcp/config/: __init__.py  models.py  settings.py
bear_mcp/mcp_server/: __init__.py  resources.py  server.py  tools.py
bear_mcp/semantic/: __init__.py  content_processing.py  embedding.py  service.py  similarity.py  vector_storage.py
config/: config.yaml
tests/: __init__.py  test_config.py  test_database.py  test_mcp_resources_tools.py  test_mcp_server.py  test_ollama_client.py  test_prompt_templates.py  test_semantic_embedding.py  test_semantic_service.py  test_similarity_engine.py  test_summarization_service.py  test_vector_storage.py
